<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.rxjavademo.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="commonEmitter_observer"
        android:text="@string/common_emitter_observer"
        android:textAllCaps="false"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="commonEmitter_consumer"
        android:text="@string/common_emitter_consumer"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="common_emitter_asynchronization"
        android:text="@string/common_emitter_asynchronization"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="emitter_zip"
        android:text="@string/emitter_zip"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00f000"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="flowable_emitter"
            android:text="@string/flowable_emitter"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="request"
            android:text="@string/flowable_emitter_request"
            android:textAllCaps="false"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00ffff"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="request_cache_demo"
            android:text="request_cache_demo"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel_emitter"
            android:text="cancel_emitter"
            android:textAllCaps="false"
            android:textSize="14sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel_emitter_request"
            android:text="request"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="retryWhen"
        android:text="retryWhen"
        android:textAllCaps="false"
        android:textSize="14sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="emitterErrorTest"
        android:text="emitterErrorTest"
        android:textAllCaps="false"
        android:textSize="14sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="takeUtil"
        android:text="takeUtil"
        android:textAllCaps="false"
        android:textSize="14sp" />
</LinearLayout>
